Update Form Password

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário</title>
   
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
@@ -44,7 +44,7 @@
 
           <div class="form-password">
             <label for="password">Senha <span>(mínimo 6 caractéres)</span></label>
-            <input type="text" id="password" required minlength="6">
+            <input type="password" id="password" required minlength="6">
           </div>
 
         </div>
